# CMake-Tutorials

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake.yml
Code-Tech-and-Tutorials/: README.md
Code-Tech-and-Tutorials/EP01/: CMakeLists.txt  main.cpp
Code-Tech-and-Tutorials/EP03/: CMakeLists.txt  README.md  build.bat  main.cpp
Code-Tech-and-Tutorials/EP04/: CMakeLists.txt  README.md  main.cpp
Code-Tech-and-Tutorials/Ep10/: CMakeLists.txt  main.cpp
VisualStudio/CMakeVisualStudioProject/: CMakeLists.txt
VisualStudio/CMakeVisualStudioProject/CMakeVisualStudioProject/: CMakeLists.txt  CMakeVisualStudioProject.cpp  CMakeVisualStudioProject.h
